--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,13 +6,16 @@
     }
   },
   "Kestrel": {
-  "Endpoints": {
-    "Https": {
-      "Url": "https://localhost:7165"
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5165"
+      },
+      "Https": {
+        "Url": "https://localhost:7165"
+      }
     }
   },
   "Ably": {
     "ApiKey": ""
   }
-}
 }
